Update '.gitignore' file to exclude 'node_modules/' and 'tokenizers' directories

--- a/.gitignore
+++ b/.gitignore
@@ -9,23 +9,9 @@ Thumbs.db
 .vscode/
 
 # Testing files
+*/Testing/*
 *.file
-
-# Node Modules folder
-node_modules/
 
 # Personal study materials
 *.zip
 first_README.md
-
-# Python bytecode cache files
-__pycache__/
-
-# NLTK Punkt tokenizer library files
-/tokenizers
-
-# Model file
-data.pth
-
-# Chat History
-chat_history.json
